k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adarkwa-study-bot
  labels:
    app: adarkwa-bot
