k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adarkwa-bot-admin-service
  labels:
    app: adarkwa-bot-admin
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: adarkwa-bot-admin
    component: frontend
