k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adarkwa-postgres
  labels:
    app: adarkwa-postgres
spec:
  clusterIP: None
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: adarkwa-postgres
